# DNS-server

./: Cargo.toml  README.md  README.txt
src/: domain.rs  main.rs  parsing.rs  protocol.rs  utils.rs
src/domain/: answer.rs  body.rs  header.rs  question.rs
src/parsing/: arguments.rs  body.rs  compression.rs  label_encoding.rs
src/protocol/: body.rs  header.rs  question.rs
src/utils/: label_encoding.rs
