[package]
name = "dns-rust"
version = "0.1.0"
authors = ["alexpasmantier"]
edition = "2023"

[dependencies]
anyhow = "1.0.68"          # error handling
bytes = "1.3.0"            # helps manage buffers
thiserror = "1.0.38"       # error handling
nom = "7.1.3"              # parsing
rand = "0.8.5"             # randomness
